--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,34 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+  <nav class="nav navbar-default" >
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+     <div class="navbar-header">
+      <button type="button" class="nabvar-toggle collapsed" data-toggle="collapse" data-target="#bs-exapmle-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+       <a class="navbar-brand" href="#">
+         <img class="logo" alt="logo">MeweB Design
+       </a>
+      <!-- end of navbar-header -->
+     </div>
+
+     <!-- Collect the nav links, forms and other content for toggleing -->
+     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li></li>
+
+      </ul>
+
+     </div>
+      <!-- end of container-fluid -->
+    </div>
+
+  </nav>
 
   <!--
     Previous project placeholder begins
@@ -16,7 +44,7 @@
     <h1>Morgan McCircuit</h1>
     <h2>I write code</h2>
   </div>
-
+s
   <div class="tagline">
     <h3>Who I am</h3>
     <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
