--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
   <title>HTML Portfolio</title>
@@ -12,30 +12,40 @@
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
      <div class="navbar-header">
-      <button type="button" class="nabvar-toggle collapsed" data-toggle="collapse" data-target="#bs-exapmle-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-collapse-menu">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
        <a class="navbar-brand" href="#">
-         <img class="logo" alt="logo">MeweB Design
+         <img class="logo" alt="logo" src="...">MeweB Design
        </a>
       <!-- end of navbar-header -->
      </div>
 
      <!-- Collect the nav links, forms and other content for toggleing -->
-     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+     <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
       <ul class="nav navbar-nav">
-        <li></li>
-
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Service</a></li>
+        <li><a href="#">About</a></li>
       </ul>
-
+      <!-- end of navbar-collapse -->
      </div>
       <!-- end of container-fluid -->
     </div>
-
   </nav>
+  <!-- carousel -->
+  <div class="item">
+    <img src="..." alt="...">
+    <div class="carousel-caption">
+      <h3></h3>
+      <p></p>
+
+    </div>
+
+  </div>
 
   <!--
     Previous project placeholder begins
