--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,26 @@
   </a>
     <!-- end of #portfolio-carusel -->
   </div>
+  <div class="marketing">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <span class="glyphicon glyphicon-cutlery"></span>
+        </div>
+        <div class="col-md-4">
+          <span>
 
+          </span>
+        </div>
+        <div class="col-md-4">
+          <span>
+
+          </span>
+        </div>
+
+      </div>
+    </div>
+  </div>
   <!--
     Previous project placeholder begins
   -->
