--- a/src/index.html
+++ b/src/index.html
@@ -5,31 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
-  <title>HTML Portfolio</title>
+  <title>Bootstrap practice</title>
 </head>
 <body>
   <nav class="nav navbar-default" >
     <div class="container-fluid">
+      <div class="row top-contact">
+        <div class="col-md-3 col-md-offset-9 visible-sm visible-md visible-lg">
+        <ul class="list-unstyled list-inline">
+        <li class="contact-space"><span class="glyphicon glyphicon-phone
+"></span> 1234567</li>
+        <li><span class="glyphicon glyphicon-envelope"></span>paws@mewmew.com</li>
+        </ul>
+        </div>
+      </div>
       <!-- Brand and toggle get grouped for better mobile display -->
      <div class="navbar-header">
+       <a class="navbar-brand" href="#">
+         <img class="logo" alt="logo" src="./img/Logomakr_7hCWur.png">
+       </a>
+
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-collapse-menu">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-       <a class="navbar-brand" href="#">
-         <img class="logo" alt="logo" src="./img/Logomakr_7hCWur.png">
-       </a>
+
       <!-- end of navbar-header -->
      </div>
 
      <!-- Collect the nav links, forms and other content for toggleing -->
      <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Home</a></li>
         <li><a href="#">Service</a></li>
         <li><a href="#">About</a></li>
+        <li class="visible-xs-block contact-space"><span class="glyphicon glyphicon-phone"></span> 1234567</li>
+        <li class="visible-xs-block contact-space"><span class="glyphicon glyphicon-envelope"></span>paws@mewmew.com</li>
       </ul>
       <!-- end of navbar-collapse -->
      </div>
@@ -58,7 +71,7 @@
         <div class="container">
           <div class="carousel-caption">
             <h1>Zoe the dog</h1>
-            <p>I am the queen of house and no one cannot stop me.</p>
+            <p>I am the queen of house and no one can stop me.</p>
           </div>
         </div>
       </div>
@@ -86,53 +99,33 @@
       <div class="row">
         <div class="col-md-4">
           <span class="glyphicon glyphicon-cutlery"></span>
+          <h2>Food Review</h2>
+          <p>Midget only accept very fresh food.</p>
         </div>
         <div class="col-md-4">
-          <span>
-
-          </span>
+          <span class="glyphicon glyphicon-eye-open"></span>
+          <h2>Security</h2>
+          <p>Zoe does not allow any intruder.</p>
         </div>
         <div class="col-md-4">
-          <span>
-
-          </span>
+          <span class="glyphicon glyphicon-sunglasses"></span>
+          <h2>Blind test</h2>
+          <p>Delta can tell anything with smell</p>
         </div>
 
       </div>
     </div>
   </div>
-  <!--
-    Previous project placeholder begins
-  -->
-  <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
-  </div>
-s
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
-  </div>
-
-
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
-  </div>
-
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
-  <!--
-    Previous project placeholder ends
-    (unused pieces will be deleted at the last task)
-  -->
+  <!-- footer -->
+  <footer>
+    <div class="container">
+      <div class="col-xs-5 col-xs-offset-4 col-md-4 col-md-offset-5">
+        <p>
+          Just practice only.
+        </p>
+      </div>
+    </div>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
